      IDs already taken by Method Aliases of the current folder.

    - CMFDefault.Image and CMFDefault.File: When calling the constructor,
      any intelligent content type detection would be destroyed by the
      call to initialize Dublin Core values, which would overwrite the
      content_type. It is now preserved, if possible.
      (http://www.zope.org/Collectors/CMF/370)

  Others

    - CMFCore.PortalFolder._checkId() allows root doted prefixed name
      object overrides.

CMF 1.5.3 (2005/08/07)

  Bugs fixed

    - When the CMFBTreeFolder was moved into CMFCore, its base class was
      changed to PortalFolderBase. This broke an assumption in the
      portal_syndication tool that relied on all syndication containers
      deriving from PortalFolder (http://www.zope.org/Collectors/CMF/369)

CMF 1.5.3-beta (2005/08/02)

  Bugs Fixed

    - Changed the INSTALL_SVN instructions to conform to the new branch
      and tag naming scheme instituted for the subversion repository.

    - Apply an interim fix for slow pathwalking implementation in
      development mode on Windows (http://www.zope.org/Collectors/CMF/367)
      Note that a better fix would be to leverage pywin32 APIs for
      file / directory monitoring.

    - FSObject.manage_doCustomize() was broken for folderish objects on Zope
      2.8 because manage_permission requires a context to work.
      (see http://www.zope.org/Collectors/CMF/368)
      
    - CMFCore/FSPropertiesObject and CMFCore/FSMetadata: Removed a wrongly 
      inserted DeprecationWarning in the FSPropertiesObject class and
      put it into the FSMetadata class. We are not deprecating ".props"
      files, but ".properties" and ".security".

    - Change CVS checkout documentation to their equivalent Subversion
      instructions

    - In CMFSetup, make sure to give special treatment to both CVS and 
      .svn folders where this is necessary (e.g. to implicitly skip them
      when importing profiles)
